# isic-superpixel

./: .gitignore  CMakeLists.txt  README.md  isic-superpixel.cxx  isic-superpixel.ipynb  package-lock.json  package.json  requirements.txt
.github/workflows/: wasm.yml
python/itkwasm-isic-superpixel/: README.md  pyproject.toml
python/itkwasm-isic-superpixel-emscripten/: README.md  pyproject.toml
python/itkwasm-isic-superpixel-emscripten/itkwasm_isic_superpixel_emscripten/: __init__.py  isic_superpixel_async.py  js_package.py
python/itkwasm-isic-superpixel-emscripten/test/: test_itkwasm_isic_superpixel.py
python/itkwasm-isic-superpixel-wasi/: README.md  pyproject.toml
python/itkwasm-isic-superpixel-wasi/itkwasm_isic_superpixel_wasi/: __init__.py  isic_superpixel.py
python/itkwasm-isic-superpixel-wasi/itkwasm_isic_superpixel_wasi/wasm_modules/: isic-superpixel.wasi.wasm
python/itkwasm-isic-superpixel-wasi/tests/: test_isic_superpixels.py
python/itkwasm-isic-superpixel/docs/: conf.py  index.md
python/itkwasm-isic-superpixel/itkwasm_isic_superpixel/: __init__.py  isic_superpixel.py  isic_superpixel_async.py
typescript/: README.md  index.html  package.json
typescript/src/: index-node.ts  index.ts  isic-superpixel-node-result.ts  isic-superpixel-node.ts  isic-superpixel-options.ts  isic-superpixel-result.ts  isic-superpixel.ts  pipeline-worker-url.ts  pipelines-base-url.ts
typescript/test/browser/demo-app/: index.html  index.ts  isic-superpixel-controller.ts  isic-superpixel-load-sample-inputs.ts
